Bugfix: correct click event on mobile navbar

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -127,6 +127,9 @@ nav {
 .css-form input.ng-invalid.ng-touched {
     border: 1px solid red;
 }
+input.ng-invalid.ng-touched {
+    border: 1px solid red;
+}
 .btn-block  {
   margin-top: 10px;
 }
